0_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  labels:
    app: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      containers:
      - name: homework
        image: tempuser01/homework:part1
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /health/
            port: 8000
          initialDelaySeconds: 20
          periodSeconds: 30
