2_Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: homework-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:

    - host: arch.homework
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: homework-service
                port:
                  number: 8001
          - path: /otusapp/tulunin/(.*)
            pathType: Prefix
            backend:
              service:
                name: homework-service
                port:
                  number: 8001
